// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppContent renders 1`] = `
<main
  className="ant-layout-content"
  style={
    Object {
      "background": "#fff",
      "margin": "24px 16px",
      "minHeight": 280,
      "padding": 24,
    }
  }
>
  <div />
</main>
`;

exports[`Routes renders 1`] = `
Array [
  <main
    className="ant-layout-content"
    style={
      Object {
        "background": "#fff",
        "margin": "24px 16px",
        "minHeight": 280,
        "padding": 24,
      }
    }
  >
    <div>
      <div />
    </div>
  </main>,
  ",",
]
`;
